* refactor into one lib * start implementing jit * work on reg alloc * implement cli * work on runtime reflect api * add end to end integration tests